--- a/components/hamburger-popup/hamburger-popup.less
+++ b/components/hamburger-popup/hamburger-popup.less
@@ -1,9 +1,15 @@
+.no-title-card,
+.title-card {
+  margin-bottom: 20rpx;
+}
+
 .hamburger-popup {
   .amd-popup-content {
     background-color: #eee;
     .title-card {
       .amd-container-content {
         padding: 0;
+
         .amd-list-body {
           border-radius: 16rpx;
         }
@@ -11,7 +17,6 @@
     }
     .no-title-card {
       .amd-list-body {
-        margin-top: 10px;
         border-radius: 16rpx;
       }
     }
