--- a/components/hamburger-popup/hamburger-popup.less
+++ b/components/hamburger-popup/hamburger-popup.less
@@ -1,3 +1,4 @@
+.card-up,
 .no-title-card,
 .title-card {
   margin-bottom: 20rpx;
@@ -5,19 +6,64 @@
 
 .hamburger-popup {
   .amd-popup-content {
+    padding: 0;
     background-color: #eee;
-    .title-card {
-      .amd-container-content {
-        padding: 0;
-
-        .amd-list-body {
-          border-radius: 16rpx;
+    .up {
+    }
+    .down {
+      padding: 24rpx;
+      .card-up {
+        width: 100%;
+        box-sizing: border-box;
+        background-color: #1f1d1d;
+        border-radius: 16rpx;
+        padding: 24rpx;
+        .up-title {
+          display: flex;
+          justify-content: space-between;
+          padding-bottom: 24rpx;
+          border-bottom: 1px solid #fff;
+          .left {
+            .main-title {
+              padding-bottom: 12rpx;
+              display: flex;
+              .main-text {
+                margin-right: 12rpx;
+              }
+              .level-area {
+              }
+            }
+            .sub-title {
+            }
+          }
+          .right {
+          }
+        }
+        .down-content {
+          padding-top: 24rpx;
+          display: flex;
+          justify-content: space-between;
+          .left-content {
+          }
+          .right-content {
+          }
         }
       }
-    }
-    .no-title-card {
-      .amd-list-body {
-        border-radius: 16rpx;
+      .card-down {
+        .title-card {
+          .amd-container-content {
+            padding: 0;
+
+            .amd-list-body {
+              border-radius: 16rpx;
+            }
+          }
+        }
+        .no-title-card {
+          .amd-list-body {
+            border-radius: 16rpx;
+          }
+        }
       }
     }
   }
